# pyproject.toml
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "*-musllinux* *-win32* pp*"

before-build-linux = "yum install -y libjpeg-turbo-devel"

[tool.cibuildwheel.windows]
before-build = "vcpkg install libjpeg-turbo"
