# pyproject.toml
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-musllinux* *-win32* pp*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-build = "yum install -y libjpeg-turbo-devel openssl-devel"

[tool.cibuildwheel.windows]
before-build = "choco install libjpeg-turbo openssl -y --params \"/InstallDir:C:\\deps\""
